feat: 添加front-matter自动生成功能

--- a/blog/01.提高工作效率的小技巧.md
+++ b/blog/01.提高工作效率的小技巧.md
@@ -1,8 +1,9 @@
 ---
-title: 提高工作效率的小技巧
 authors: Rabbit
-tags: []
-description: 提高工作效率的小技巧、小工具等
+tags: 
+  - 提高工作效率的小技巧
+description: 提高工作效率的小技巧
+slug: /b21e8f3
 ---
 
 ## 快捷指令篇
