--- a/blog/02.clashX使用.md
+++ b/blog/02.clashX使用.md
@@ -1,8 +1,9 @@
 ---
-title: clashX的使用
 authors: Rabbit
-tags: [clashx, 公司内网]
-description: clashX的使用
+tags: 
+  - clashX使用
+description: clashX使用
+slug: /dc617db
 ---
 
 ## 公司内网无限制使用clashX
