--- a/docs/01.Javascript篇/01.数据类型.md
+++ b/docs/01.Javascript篇/01.数据类型.md
@@ -1,9 +1,8 @@
 ---
-title: 数据类型
-slug: /数据类型
-authors: lacorda
-tags: [数据类型]
-description: js的数据类型有哪些？存储上有何区别？
+tags: 
+  - 数据类型
+description: 数据类型
+slug: /403cd84
 ---
 
 ![数据类型](@site/static/docs/01.Javascript篇/数据类型.png)
