--- a/docs/01.Javascript篇/02.原型与继承.md
+++ b/docs/01.Javascript篇/02.原型与继承.md
@@ -1,10 +1,9 @@
 ---
-title: 原型与继承
-authors: Lacorda
-tags: [原型, 原型链, 继承]
-description: 原型、原型链、继承
+tags: 
+  - 原型与继承
+description: 原型与继承
+slug: /982aa90
 ---
-
 
 ## 一、原型和原型链
 - 每个对象都拥有一个原型对象prototype
