--- a/docs/01.Javascript篇/03.作用域与执行上下文.md
+++ b/docs/01.Javascript篇/03.作用域与执行上下文.md
@@ -1,8 +1,8 @@
 ---
-title: 作用域与执行上下文
-authors: Lacorda
-tags: [作用域，执行上下文，this，闭包]
-description: 作用域/执行上下文/this/闭包
+tags: 
+  - 作用域与执行上下文
+description: 作用域与执行上下文
+slug: /fe97d62
 ---
 
 ## 一、什么是作用域？
