--- a/docs/01.Javascript篇/04.其它.md
+++ b/docs/01.Javascript篇/04.其它.md
@@ -1,8 +1,8 @@
 ---
-title: 其它
-authors: Lacorda
-tags: [event loop, curry, 内存泄漏, 事件代理]
-description: event loop, curry, 内存泄漏, 事件代理
+tags: 
+  - 其它
+description: 其它
+slug: /8c5445c
 ---
 
 ## 一、说说你对event loop的理解
