--- a/docs/03.HTML篇/02.HTML5.md
+++ b/docs/03.HTML篇/02.HTML5.md
@@ -1,3 +1,10 @@
+---
+description: HTML5
+slug: /4dcbedc
+tags: 
+  - HTML5
+---
+
 ## HTML5有哪些更新
 
 - 语义化标签：header, section, footer, nav, menu, article, aside
