--- a/docs/03.HTML篇/03.DOM操作.md
+++ b/docs/03.HTML篇/03.DOM操作.md
@@ -1,4 +1,9 @@
-
+---
+description: DOM操作
+slug: /88d66a7
+tags: 
+  - DOM操作
+---
 
 ## 概念
 > DOM（文档对象模型），用一个逻辑树表示一个HTML文档，树上的每一个分支代表一个节点，DOM api就是用来操作这些节点的接口
