--- a/topic/01.Javascript篇/01.数据类型.mdx
+++ b/topic/01.Javascript篇/01.数据类型.mdx
@@ -1,9 +1,8 @@
 ---
-title: 数据类型
-slug: /数据类型
-authors: lacorda
-tags: [数据类型]
-description: js的数据类型有哪些？存储上有何区别？
+slug: /b54da20
+tags: 
+  - 数据类型
+description: 数据类型
 ---
 
 ## 1.数据类型有哪些？有什么差别？
