--- a/topic/01.Javascript篇/02.数组.mdx
+++ b/topic/01.Javascript篇/02.数组.mdx
@@ -1,8 +1,8 @@
 ---
-title: 数组
-authors: Lacorda
-tags: [去重, 拍平, 转化, 乱序, reduce]
-description: 去重, 拍平, 转化, 乱序, reduce
+tags: 
+  - 数组
+description: 数组
+slug: /d48e3de
 ---
 
 
