--- a/topic/01.Javascript篇/05.Date.md
+++ b/topic/01.Javascript篇/05.Date.md
@@ -1,3 +1,10 @@
+---
+description: Date
+slug: /649b880
+tags: 
+  - Date
+---
+
 ``` js
 const date = new Date()
 const date = new Date(1620579575203) // 传入时间戳
