--- a/topic/02.ES6+篇/05.Reflect.md
+++ b/topic/02.ES6+篇/05.Reflect.md
@@ -1,3 +1,10 @@
+---
+description: Reflect
+slug: /3c7dd63
+tags: 
+  - Reflect
+---
+
 `Reflect`对象的设计目的有这样几个。
 
 1. 将许多`Object`上的方法，如`Object.defineProperty`放在了`Reflect`上。现阶段，某些方法同时在`Object`和`Reflect`对象上部署，未来的新方法将只部署在`Reflect`对象上。也就是说，从`Reflect`对象上可以拿到语言内部的方法。
