--- a/docs/02.ES6+篇/ES6.mdx
+++ b/docs/02.ES6+篇/ES6.mdx
@@ -1,3 +1,10 @@
+---
+description: ES6
+slug: /0d22e0d
+tags: 
+  - ES6
+---
+
 ## let、const、var的区别
 | 区别                         | var  | let  | const |
 | ---------------------------- | ---- | ---- | ----- |
