--- a/docs/04.CSS篇/06.CSS各种布局实现.md
+++ b/docs/04.CSS篇/06.CSS各种布局实现.md
@@ -1,5 +1,9 @@
-
-
+---
+description: CSS各种布局实现
+slug: /74b7bbf
+tags: 
+  - CSS各种布局实现
+---
 
 [各种居中布局 Demo](https://lacorda.github.io/demo.html#/index/layout-center)
 
