--- a/docs/10.Git篇/01.git stach.md
+++ b/docs/10.Git篇/01.git stach.md
@@ -46,6 +46,25 @@ git stash drop {num} # 删除stash list中的储藏，例如删除第二个：gi
 git stash clear # 删除所有储藏的stash, zsh快捷指令：gstc
 ```
 
+### 误删stash怎么办 —— 万能的 CommitID
+😵‍💫 一不小心删除了stash，在`stash list`里也找不到了，怎么办？别急～😜 
+
+`git stash drop` 出的`stash`是可以找回的，因为每次 `git stash` 都会生成一个新的 `commit` ，只要知道 `commitID` , 通过 `git stash apply {commitID}` 就可以应用之前的 `stash`
+
+:::tip 寻找commitID有两种方法
+
+1. `git stash drop` 最后会打印出pop掉的`commitid`值，若这个记录还存在直接使用即可。
+
+![git stash](@site/static/docs/10.Git篇/gitstash.png)
+
+2. `git fsck --lost-found`, 会打印出所有`dangling commit`，但是这样看的话是看不出任何有用信息的，我们需要另外一条命令将其内容show出来。`git show {commitId}`
+
+![git stash](@site/static/docs/10.Git篇/gitstash2.png)
+
+![git stash](@site/static/docs/10.Git篇/gitstash3.png) 
+
+:::
+
 
 ## 以stash储藏创建一个分支
 ```bash
