--- a/blog/移动端调试完整篇.md
+++ b/blog/移动端调试完整篇.md
@@ -219,4 +219,18 @@ vConsole.destroy();
 
 ## 五、Charles
 
-[详见掘金大佬教程](https://juejin.cn/post/6844903665304600589)
+### 安装
+[官网地址](https://www.charlesproxy.com/download/)
+
+
+[其它详见掘金大佬教程](https://juejin.cn/post/6844903665304600589)
+
+## 六、Xcode
+
+[Xcode下载地址](https://developer.apple.com/download/all/)
+
+[Xcode不同版本最低要求和支持的SDK](https://developer.apple.com/cn/support/xcode/)
+
+
+
+
