feat: utterances评论插件的使用

--- a/01.docs/03.HTML篇/04.事件.md
+++ b/01.docs/03.HTML篇/04.事件.md
@@ -40,7 +40,7 @@ child.addEventListener("click",function(e){
     console.log("click-child");
 },false);
 ```
-![](../../static/docs/03.HTML篇/事件捕获.png)
+![](@site/static/docs/03.HTML篇/事件捕获.png)
 
 ## 阻止传播(阻止捕获和冒泡阶段)
 > stopPropagation()
