--- a/01.docs/helloWorld.mdx
+++ b/01.docs/helloWorld.mdx
@@ -1,10 +1,9 @@
 ---
 id: helloWorld
-title: a demo for docusaurus
 slug: /test
-tags:
-  - Demo
-  - Getting started
+tags: 
+  - helloWorld
+description: helloWorld
 ---
 
 # 标题
