--- a/03.someerror/01.npm install时报错EINTEGRITY.md
+++ b/03.someerror/01.npm install时报错EINTEGRITY.md
@@ -9,7 +9,7 @@ tags:
 ## 楔子
 
 偶尔项目开发过程中，忽然各种报错
-![EINTEGRITY报错](@site/static/blog/EINTEGRITY.jpg)
+![EINTEGRITY报错](@site/static/tips/999.其他/EINTEGRITY.jpg)
 
 像大多数同学一样，几步常规操作：
 
@@ -39,7 +39,7 @@ npm i
 
 如图，`sha512-xxx`后面的hash值不匹配
 
-![EINTEGRITY报错](@site/static/blog/EINTEGRITY02.jpg)
+![EINTEGRITY报错](@site/static/tips/999.其他/EINTEGRITY02.jpg)
 
 
 ## 解决方案
@@ -80,7 +80,7 @@ npm install
 
 我们来看下 `index-v5` 文件夹里文件的内容，可以看出，里面包含的`依赖包`的一些`HTTP`请求等信息:
 
-![索引文件](../static/blog/EINTEGRITY03.jpg)
+![索引文件](@site/static/tips/999.其他/EINTEGRITY03.jpg)
 
 
 ## 引申：npm cache clean和verify的区别
