feat: 记录待整理

--- a/10.blog/07.css中直接内联使用svg图片.md
+++ b/10.blog/07.css中直接内联使用svg图片.md
@@ -1,3 +1,9 @@
+---
+description: css中直接内联使用svg图片
+slug: /7f0f71e
+tags: 
+  - css中直接内联使用svg图片
+---
 
 
 `background-image` 添加 `data:image/svg+xml;utf8,` 后面直接使用 `svg` 资源即可
