--- a/03.someerror/03.接口 301 Moved Permanently.md
+++ b/03.someerror/03.接口 301 Moved Permanently.md
@@ -1,3 +1,9 @@
+---
+description: 接口 301 Moved Permanently
+slug: /433ab77
+tags: 
+  - 接口 301 Moved Permanently
+---
 ## 场景
 接口访问报错：301 Moved Permanently
 
