--- a/10.blog/04.sessionStorage遍历所有key.md
+++ b/10.blog/04.sessionStorage遍历所有key.md
@@ -1,3 +1,9 @@
+---
+description: sessionStorage遍历所有key
+slug: /a0c3f49
+tags: 
+  - sessionStorage遍历所有key
+---
 
 
 `sessionStorage` `数据遍历，sessionStrage` 获取所有 `key`
