feat: monaco editor 暂提

--- a/03.third/01.monaco-editor/01.概述.md
+++ b/03.third/01.monaco-editor/01.概述.md
@@ -6,4 +6,38 @@ tags:
 ---
 
 
-## monaco-editor
+## monaco editor
+
+`monaca editor`是一个由`微软`提供的开源的Web端代码编辑器，我们熟知的 `vscode` 就是基于其来实现的
+
+也就是说，我们在 `vscode` 里面能够做到的功能理论上你也是可以通过 `monaco editor` 来实现的
+
+移动浏览器或移动 web 框架不支持 Monaco 编辑器
+
+### 主要特性：
+1. 丰富的智能感知 与 验证，支持不同语法 
+2. 基本的语法着色，见[monarch](https://microsoft.github.io/monaco-editor/monarch.html)
+3. `diff Editor` 差异比较
+
+[代码特性](https://code.visualstudio.com/docs/editor/editingevolved)
+
+[官方网址](https://microsoft.github.io/monaco-editor/)
+
+[API](https://microsoft.github.io/monaco-editor/api/index.html)
+
+## monaco editor的几个概念
+
+### monaco对象
+
+包含`editor`, `languages`, `worker`三个对象
+
+### editor
+编辑器相关的一些API
+
+
+### languages
+自定义语言相关的API
+
+
+### worker
+编辑器线程相关的API，比如给编辑器性能调优，一般用不上
