--- a/03.third/01.monaco-editor/01.概述.md
+++ b/03.third/01.monaco-editor/01.概述.md
@@ -41,3 +41,11 @@ tags:
 
 ### worker
 编辑器线程相关的API，比如给编辑器性能调优，一般用不上
+
+
+### 附录
+[KeyCode](https://microsoft.github.io/monaco-editor/api/enums/monaco.KeyCode.html)
+
+[Range](https://microsoft.github.io/monaco-editor/api/classes/monaco.Selection.html#constructor)
+
+
