--- a/03.third/01.monaco-editor/99.API/03.editor options.md
+++ b/03.third/01.monaco-editor/99.API/03.editor options.md
@@ -1,3 +1,9 @@
+---
+description: editor options
+slug: /9e0050b
+tags: 
+  - editor options
+---
 
 
 ## 常用options
@@ -791,7 +797,7 @@ Performance guard: Stop rendering a line after x characters. Defaults to 10000. 
 ### !!!suggest
 提议，见[ISuggestOptions](https://microsoft.github.io/monaco-editor/api/interfaces/monaco.editor.ISuggestOptions.html)
 
-![提议](../../static/third/monaco02.png)
+![提议](@site/static/third/monaco02.png)
 
 - 
 
