--- a/03.third/01.monaco-editor/99.API/04.suggest提议面板.md
+++ b/03.third/01.monaco-editor/99.API/04.suggest提议面板.md
@@ -1,7 +1,13 @@
+---
+description: suggest提议面板
+slug: /491d3e9
+tags: 
+  - suggest提议面板
+---
 
 ## sugget行为与样式
 
-![提议](../../static/third/monaco02.png)
+![提议](@site/static/third/monaco02.png)
 
 
 ## suggestFontSize
