--- a/03.third/01.monaco-editor/99.API/05.model模型.md
+++ b/03.third/01.monaco-editor/99.API/05.model模型.md
@@ -1,3 +1,9 @@
+---
+description: model模型
+slug: /732fc5c
+tags: 
+  - model模型
+---
 
 ## 关于模型model
 见[ITextModel](https://microsoft.github.io/monaco-editor/api/interfaces/monaco.editor.ITextModel.html)
