feat: monaco-editor

--- a/03.third/01.monaco-editor/99.API/02.editor对象.md
+++ b/03.third/01.monaco-editor/99.API/02.editor对象.md
@@ -16,26 +16,26 @@ create(
 ): IStandaloneCodeEditor
 ```
 
-[官网api](https://microsoft.github.io/monaco-editor/api/modules/monaco.editor.html#create)
+[官网api](https://microsoft.github.io/monaco-editor/docs.html#functions/editor.create.html)
 
 ![create](@site/static/third/monaco01.png)
 
 它接收三个参数：
 - domElement: 一个dom元素, 必填
-- options: 可选参数, 配置项，见[IStandaloneEditorConstructionOptions](https://microsoft.github.io/monaco-editor/api/interfaces/monaco.editor.IStandaloneEditorConstructionOptions.html)
+- options: 可选参数, 配置项，见[IStandaloneEditorConstructionOptions](https://microsoft.github.io/monaco-editor/docs.html#interfaces/editor.IStandaloneEditorConstructionOptions.html)
 - override: 可选参数, 没用到，可能是用于重新定义一些参数
 
 
-返回一个`editor对象`，见[IStandaloneCodeEditor](https://microsoft.github.io/monaco-editor/api/interfaces/monaco.editor.IStandaloneCodeEditor.html)
+返回一个`editor对象`，见[IStandaloneCodeEditor](https://microsoft.github.io/monaco-editor/docs.html#interfaces/editor.IStandaloneCodeEditor.html)
 
 
 ## Editor对象
 
-见[https://microsoft.github.io/monaco-editor/api/interfaces/monaco.editor.IStandaloneCodeEditor.html](https://microsoft.github.io/monaco-editor/api/interfaces/monaco.editor.IStandaloneCodeEditor.html)
+见[https://microsoft.github.io/monaco-editor/docs.html#interfaces/editor.IStandaloneCodeEditor.html](https://microsoft.github.io/monaco-editor/docs.html#interfaces/editor.IStandaloneCodeEditor.html)
 
 ### 事件
 
-event参数见[](https://microsoft.github.io/monaco-editor/api/interfaces/monaco.editor.IEditorMouseEvent.html)
+event参数见[](https://microsoft.github.io/monaco-editor/docs.html#interfaces/editor.IEditorMouseEvent.html)
 
 - event
 - target
