--- a/03.third/01.monaco-editor/99.API/03.editor options.md
+++ b/03.third/01.monaco-editor/99.API/03.editor options.md
@@ -149,7 +149,7 @@ Enable that the selection with the mouse and keys is doing column selection. Def
 
 ### !!!comments
 Control the behaviour of comments in the editor.
-控制编辑器中注释的行为。见[IEditorCommentsOptions](https://microsoft.github.io/monaco-editor/api/interfaces/monaco.editor.IEditorCommentsOptions.html)
+控制编辑器中注释的行为。见[IEditorCommentsOptions](https://microsoft.github.io/monaco-editor/docs.html#interfaces/editor.IEditorCommentsOptions.html)
 
 - ignoreEmptyLines 忽略空行
 Ignore empty lines when inserting line comments. Defaults to true.
@@ -278,7 +278,7 @@ Control the behavior of the find widget.
 
 控制查找小部件的行为。
 
-见[IEditorFindOptions](https://microsoft.github.io/monaco-editor/api/interfaces/monaco.editor.IEditorFindOptions.html)
+见[IEditorFindOptions](https://microsoft.github.io/monaco-editor/docs.html#interfaces/editor.IEditorFindOptions.html)
 
 - addExtraSpaceOnTop 
 - autoFindInSelection  
@@ -367,12 +367,12 @@ Enable the rendering of the glyph margin. Defaults to true in vscode and to fals
 
 ### ???gotoLocation
 跳到位置，跟`find`哪个是自动索引？？
-见[IGotoLocationOptions](https://microsoft.github.io/monaco-editor/api/interfaces/monaco.editor.IGotoLocationOptions.html)
+见[IGotoLocationOptions](https://microsoft.github.io/monaco-editor/docs.html#interfaces/editor.IGotoLocationOptions.html)
 
 
 
 ### guides
-控制编辑器指南的行为。见[IGuidesOptions](https://microsoft.github.io/monaco-editor/api/interfaces/monaco.editor.IGuidesOptions.html)
+控制编辑器指南的行为。见[IGuidesOptions](https://microsoft.github.io/monaco-editor/docs.html#interfaces/editor.IGuidesOptions.html)
 
 
 ### hideCursorInOverviewRuler
@@ -383,7 +383,7 @@ Should the cursor be hidden in the overview ruler. Defaults to false.
 ### hover
 Configure the editor's hover.
 
-配置编辑器的悬停。见[IEditorHoverOptions](https://microsoft.github.io/monaco-editor/api/interfaces/monaco.editor.IEditorHoverOptions.html)
+配置编辑器的悬停。见[IEditorHoverOptions](https://microsoft.github.io/monaco-editor/docs.html#interfaces/editor.IEditorHoverOptions.html)
 
 - above 悬停是否应该显示在行的上方? 默认为 false。
 - delay 显示悬停时延迟。默认值为300。
@@ -405,7 +405,7 @@ Control the behavior and rendering of the inline hints.
 
 
 ### inlineSuggest
-内嵌式提议，见[IInlineSuggestOptions](https://microsoft.github.io/monaco-editor/api/interfaces/monaco.editor.IInlineSuggestOptions.html)
+内嵌式提议，见[IInlineSuggestOptions](https://microsoft.github.io/monaco-editor/docs.html#interfaces/editor.IInlineSuggestOptions.html)
 
 
 ### !!!insertSpaces
@@ -493,7 +493,7 @@ Lines above this length will not be tokenized for performance reasons. Defaults 
 ### !!!minimap 右侧小地图
 Control the behavior and rendering of the minimap.
 
-控制小地图的行为和呈现。见[IEditorMinimapOptions](https://microsoft.github.io/monaco-editor/api/interfaces/monaco.editor.IEditorMinimapOptions.html)
+控制小地图的行为和呈现。见[IEditorMinimapOptions](https://microsoft.github.io/monaco-editor/docs.html#interfaces/editor.IEditorMinimapOptions.html)
 
 - autohide?: boolean 试过好像无效
 - enabled?: boolean 为false时，隐藏右侧小地图，默认为true
@@ -576,13 +576,13 @@ The number of vertical lanes the overview ruler should render. Defaults to 3.
 
 ### !!!padding
 编辑器第一行距离边框的间距
-见[IEditorPaddingOptions](https://microsoft.github.io/monaco-editor/api/interfaces/monaco.editor.IEditorPaddingOptions.html)
+见[IEditorPaddingOptions](https://microsoft.github.io/monaco-editor/docs.html#interfaces/editor.IEditorPaddingOptions.html)
 - bottom
 - top
 
 
 ### !!!parameterHints
-参数提示, 见[IEditorParameterHintOptions](https://microsoft.github.io/monaco-editor/api/interfaces/monaco.editor.IEditorParameterHintOptions.html)
+参数提示, 见[IEditorParameterHintOptions](https://microsoft.github.io/monaco-editor/docs.html#interfaces/editor.IEditorParameterHintOptions.html)
 
 - cycle 循环提示, 默认为false
 - enable 开启，默认是true
@@ -599,7 +599,7 @@ Controls whether to focus the `inline editor` in the peek widget by default. Def
 ### quickSuggestions
 Enable quick suggestions (shadow suggestions) Defaults to true.
 
-启用快速建议(影子建议)默认为真。见[IQuickSuggestionsOptions](https://microsoft.github.io/monaco-editor/api/interfaces/monaco.editor.IQuickSuggestionsOptions.html)
+启用快速建议(影子建议)默认为真。见[IQuickSuggestionsOptions](https://microsoft.github.io/monaco-editor/docs.html#interfaces/editor.IQuickSuggestionsOptions.html)
 
 - comments
 - other
@@ -701,7 +701,7 @@ Enable that the editor scrolls only the predominant axis. Prevents horizontal dr
 
 
 ### !!!scrollbar
-滚动条设置，见[IEditorScrollbarOptions](https://microsoft.github.io/monaco-editor/api/interfaces/monaco.editor.IEditorScrollbarOptions.html)
+滚动条设置，见[IEditorScrollbarOptions](https://microsoft.github.io/monaco-editor/docs.html#interfaces/editor.IEditorScrollbarOptions.html)
 
 
 - alwaysConsumeMouseWheel 始终使用鼠标滚轮事件(始终在浏览器事件上调用 proventDefault ()和 stop 传播())。默认为true。注意: 无法使用 updateOptions ()更新此选项
@@ -755,7 +755,7 @@ Controls whether the semanticHighlighting is shown for the languages that suppor
 
 
 ### smartSelect
-智能选区，见[ISmartSelectOptions](https://microsoft.github.io/monaco-editor/api/interfaces/monaco.editor.ISmartSelectOptions.html)
+智能选区，见[ISmartSelectOptions](https://microsoft.github.io/monaco-editor/docs.html#interfaces/editor.ISmartSelectOptions.html)
 
 - selectLeadingAndTrailingWhitespace
 
@@ -777,7 +777,7 @@ Keep peek editors open even when double clicking their content or when hitting E
 
 Control the behavior of sticky scroll options
 
-滚动条吸附，见[IEditorStickyScrollOptions](https://microsoft.github.io/monaco-editor/api/interfaces/monaco.editor.IEditorStickyScrollOptions.html)
+滚动条吸附，见[IEditorStickyScrollOptions](https://microsoft.github.io/monaco-editor/docs.html#interfaces/editor.IEditorStickyScrollOptions.html)
 
 - enabled
 - maxLineCount
@@ -795,7 +795,7 @@ Performance guard: Stop rendering a line after x characters. Defaults to 10000. 
 性能保护: 停止渲染 x 字符后面的一行。默认为10000。使用 -1永远不停止渲染
 
 ### !!!suggest
-提议，见[ISuggestOptions](https://microsoft.github.io/monaco-editor/api/interfaces/monaco.editor.ISuggestOptions.html)
+提议，见[ISuggestOptions](https://microsoft.github.io/monaco-editor/docs.html#interfaces/editor.ISuggestOptions.html)
 
 ![提议](@site/static/third/monaco02.png)
 
