--- a/03.third/01.monaco-editor/99.API/04.suggest提议面板.md
+++ b/03.third/01.monaco-editor/99.API/04.suggest提议面板.md
@@ -19,7 +19,7 @@ tags:
 
 
 ## options
-见[ISuggestOptions](https://microsoft.github.io/monaco-editor/api/interfaces/monaco.editor.ISuggestOptions.html)
+见[ISuggestOptions](https://microsoft.github.io/monaco-editor/docs.html#interfaces/editor.ISuggestOptions.html)
 
 ### filterGraceful
 ### insertMode
