--- a/03.third/01.monaco-editor/99.API/05.model模型.md
+++ b/03.third/01.monaco-editor/99.API/05.model模型.md
@@ -6,4 +6,4 @@ tags:
 ---
 
 ## 关于模型model
-见[ITextModel](https://microsoft.github.io/monaco-editor/api/interfaces/monaco.editor.ITextModel.html)
+见[ITextModel](https://microsoft.github.io/monaco-editor/docs.html#interfaces/editor.ITextModel.html)
