--- a/03.third/01.monaco-editor/99.API/06.widget小部件.md
+++ b/03.third/01.monaco-editor/99.API/06.widget小部件.md
@@ -11,7 +11,7 @@ tags:
 
 ![contentWidget](@site/static/third/monaco03.png)
 
-见[https://microsoft.github.io/monaco-editor/api/interfaces/monaco.editor.IContentWidget.html](https://microsoft.github.io/monaco-editor/api/interfaces/monaco.editor.IContentWidget.html)
+见[https://microsoft.github.io/monaco-editor/docs.html#interfaces/editor.IContentWidget.html](https://microsoft.github.io/monaco-editor/docs.html#interfaces/editor.IContentWidget.html)
 
 
 ### 使用
@@ -71,7 +71,7 @@ editor.addContentWidget(contentWidget);
 #### getPosition
 获取内容小部件的位置。如果返回 null，内容小部件将被放置在屏幕之外
 
-返回[`IContentWidgetPosition`对象](https://microsoft.github.io/monaco-editor/api/interfaces/monaco.editor.IContentWidgetPosition.html), 包含：
+返回[`IContentWidgetPosition`对象](https://microsoft.github.io/monaco-editor/docs.html#interfaces/editor.IContentWidgetPosition.html), 包含：
 
 - position:  {`column`: 列（从1开始），`lineNumber`: 行号（从1开始）}， 必选项
 - preference 首选项，是个数组，判断`position`位置是内容相对`行列`的位置， 必选项
@@ -86,7 +86,7 @@ editor.addContentWidget(contentWidget);
 
 ![overlayWidget](@site/static/third/monaco04.png)
 
-见[https://microsoft.github.io/monaco-editor/api/interfaces/monaco.editor.IOverlayWidget.html](https://microsoft.github.io/monaco-editor/api/interfaces/monaco.editor.IOverlayWidget.html)
+见[https://microsoft.github.io/monaco-editor/docs.html#interfaces/editor.IOverlayWidget.html](https://microsoft.github.io/monaco-editor/docs.html#interfaces/editor.IOverlayWidget.html)
 
 
 ### 使用
