--- a/01.docs/13.Chrome篇/01.devTools.md
+++ b/01.docs/13.Chrome篇/01.devTools.md
@@ -39,7 +39,7 @@ tags:
 ![选择已有机型](@site/static/docs/13.Chrome篇/elements-03.png)
 ![添加自定义设备](@site/static/docs/13.Chrome篇/elements-02.png)
 
-- 其他设置
+- 其他设置: 媒体查询、标尺、DPR、截图等
 ![其他设置](@site/static/docs/13.Chrome篇/elements-002.png)
 
 ### 样式
@@ -363,9 +363,8 @@ $x('html/body/div')
 ![修改代码](@site/static/docs/13.Chrome篇/source-06.png)
 
 
-### 其它
-
-+ 添加「代码段」
+### 代码段
+> 可以将一些常用的函数，代码片段，工具等，放到代码段保存起来，而不需要控制台上`console`比较麻烦，只要不去删除，就会一直存在
 
 
 ## 网络(Network)
@@ -765,6 +764,27 @@ readAll();
 
 !!! 性能分析需使用「无痕模式」下进行，以确保 Chrome 环境的干净
 
+### Lighthouse面板
+> 全自动分析总结，Chrome通过一系列的规则来对网页进行评估分析
+
+
+![Lighthouse面板](@site/static/docs/13.Chrome篇/performance-07.gif)
+
+#### 性能分析的5个指标
+1. First Contentful Paint: 内容首次绘制使用时间。
+2. Largest Contentful Paint: 最大内容渲染时间，可以代表当前页面主要内容展示的时间
+3. Total Blocking Time: 累积阻塞时长，越小说明页面能够更好的快速响应用户事件。
+4. Cumulative Layout Shift: 累积布局变化量，分数越低，表明页面的布局稳定性越高，通常低于0.1表示页面稳定性良好。
+5. Speed Index: 速度指标是一个页面加载性能指标，向你展示明显填充页面内容的速度，此指标的分数越低越好。
+
+![Lighthouse面板 - 5个指标](@site/static/docs/13.Chrome篇/performance-08.png)
+
+之后chrome还会给出优化建议，我们可以判定可用有效建议进行优化
+
+#### 无障碍功能优化
+> 一些无障碍的优化点，不全面可作参考，仍需自己再检测
+
+
 ### 性能(Performance)面板
 > 分析运行时性能。分析页面的响应、动画和空闲阶段
 
@@ -820,7 +840,7 @@ readAll();
 
 
 #### 内存区
-> 内存使用曲线，可以通过曲线升降，判断内存使用大小，曲线不断住上升，就肯定有内存泄漏（结合聚合区可以分析定位到出现内存泄漏的代码）
+> 内存使用曲线：将一开始没有进行操作时的内存使用情况作为基准值，与最后停止操作并进行 GC 后的值进行比较，如果有较明显的差距，则说明产生了内存泄漏。
 
 ![Performance面板-Main代码分析](@site/static/docs/13.Chrome篇/performance-06.png)
 
@@ -836,28 +856,6 @@ readAll();
 [Chrome Dev Tools 性能分析&调试技巧](https://juejin.cn/post/7076277971392135176)
 [从 B 站出发，用 Chrome devTools performance 分析页面如何渲染](https://juejin.cn/post/7204715616284082233)
 
-
-### Lighthouse面板
-> 全自动分析总结，Chrome通过一系列的规则来对网页进行评估分析
-
-
-![Lighthouse面板](@site/static/docs/13.Chrome篇/performance-07.gif)
-
-#### 性能分析的5个指标
-1. First Contentful Paint: 内容首次绘制使用时间。
-2. Largest Contentful Paint: 最大内容渲染时间，可以代表当前页面主要内容展示的时间
-3. Total Blocking Time: 累积阻塞时长，越小说明页面能够更好的快速响应用户事件。
-4. Cumulative Layout Shift: 累积布局变化量，分数越低，表明页面的布局稳定性越高，通常低于0.1表示页面稳定性良好。
-5. Speed Index: 速度指标是一个页面加载性能指标，向你展示明显填充页面内容的速度，此指标的分数越低越好。
-
-![Lighthouse面板 - 5个指标](@site/static/docs/13.Chrome篇/performance-08.png)
-
-之后chrome还会给出优化建议，我们可以判定可用有效建议进行优化
-
-#### 无障碍功能优化
-> 一些无障碍的优化点，不全面可作参考，仍需自己再检测
-
-
 ## 分析内存使用情况
 
 ### Chrome的任务管理器
@@ -866,13 +864,59 @@ readAll();
 ![任务管理器](@site/static/docs/13.Chrome篇/memory-01.png)
 ![任务管理器](@site/static/docs/13.Chrome篇/memory-02.png)
 
-### Performance面板内存曲线
+:::tip
+1. 内存占用空间: 任务在占用的本地内存，包含DOM
+2. javascript使用的内存: js堆内存
+:::
+
+### 使用 Performance 可视化检测内存泄漏
+
 
 ### 内存(Memory)面板
+> 检测到发生了内存泄漏后，可以转到 Memory 面板，进行更进一步的分析。
 
 
+![Memory面板](@site/static/docs/13.Chrome篇/memory-003.png)
+
+测试：[Memory测试](/site#/devtools/element)
+
+在浏览器中，常见的内存泄漏包含以下场景：
+
+1. 闭包使用不当引起内存泄漏
+2. 分离的 DOM 节点
+3. 全局变量和全局绑定的事件
+4. 遗忘的定时器
 
 
+#### 查看内存堆快照
+![Memory面板](@site/static/docs/13.Chrome篇/memory-03.png)
+
+
+#### 查看内存分配时间轴信息
+> 最上方的时间轴中，条形说明在该时间段发生了内存分配。条形的高度对应了分配的内存大小，条形的蓝色部分说明依然存活的对象数量，灰色部分说明已经被 GC 的对象数量。如果较早时间分配的对象依然大量存活，则说明可能有内存泄漏的问题
+
+![Memory面板](@site/static/docs/13.Chrome篇/memory-04.png)
+
+#### 性能监视器
+![性能监视器](@site/static/docs/13.Chrome篇/memory-05.png)
+
+
+## 动画(Animation)面板
+> 捕捉页面里的动画，并根据动画的运动轨迹划分关键帧，我们可以一目了解地知道该关键帧下的哪些元素正在进行哪些样式的变化
+
+[示例: animation.style](https://animate.style/)
+
+![动画面板](@site/static/docs/13.Chrome篇/animation-01.png)
+
+面板功能:
+- 1 ———— 控制区：清除、暂停/恢复播放、播放速度控制
+- 2 ———— 预览区
+- 3 ———— 时间轴：重放，时间显示
+- 4 ———— 详情区：可以看到有哪些元素，还可以拖动调整修改，样式上会实时出现更新后的样式
+
+:::caution
+注意：动画检查器支持 CSS 动画、CSS 过渡和网络动画，但暂不支持 requestAnimationFrame 动画
+:::
 
 ## 安全(Security)
 > 网站的安全性概览，包含证书、网络请求和资源安全性
@@ -883,24 +927,102 @@ readAll();
 
 
 
-## 其他
+## 其它好用的点
+
+### 命令菜单打开任何功能
+`Command`+`Shift`+`P`打开
+
+![命令菜单](@site/static/docs/13.Chrome篇/other-01.png)
+
+
+### 截图功能
+
+![截图功能](@site/static/docs/13.Chrome篇/other-02.png)
+
+![截图功能](@site/static/docs/13.Chrome篇/other-002.png)
+
+
+### 全局可视化编辑
+> 可以用作模拟文字超长时的样式，而不需要在 `（Element）面板`中操作，可为便利。包含所有元素
+
+
+![全局可视化编辑](@site/static/docs/13.Chrome篇/other-03.png)
+
+
+控制台输入：
+```js
+document.body.contentEditable = true;
+
+// or
+document.designMode = 'on'
+```
+
+
+### 样式上的一些方便操作
+
+#### flex布局可视化调整
+![flex布局可视化调整](@site/static/docs/13.Chrome篇/other-04.png)
+
+
+#### 颜色/阴影可视化调整
+
+![颜色/阴影可视化调整](@site/static/docs/13.Chrome篇/other-08.png)
+![颜色/阴影可视化调整](@site/static/docs/13.Chrome篇/other-008.png)
+
+
+#### 字体可视化调整
+
+> 这是一个实验功能，需要先打开配置：设置 - 实验 - 过滤搜索`font`，勾选`Enable new Font Editor tool with this Styles Pane`
+![字体可视化调整](@site/static/docs/13.Chrome篇/other-05.png)
+![字体可视化调整](@site/static/docs/13.Chrome篇/other-06.png)
+
+### 元素面板鼠标悬停显示标尺
+> 设置 - 偏好设置 - 元素 - 鼠标悬停显示标尺
+
+![元素面板鼠标悬停显示标尺](@site/static/docs/13.Chrome篇/other-07.png)
+![元素面板鼠标悬停显示标尺](@site/static/docs/13.Chrome篇/other-007.png)
+
+
+### 控制台输出显示时间
+![控制台输出显示时间](@site/static/docs/13.Chrome篇/other-09.png)
+![控制台输出显示时间](@site/static/docs/13.Chrome篇/other-009.png)
+
+
+### 移动端H5调试
+
+1. 使用数据线，手机连接电脑（开启文件传输）
+2. 打开`chrome://inspect`
+3. 可以看到出现h5页面（包含appm内嵌h5，微信浏览器不行）
+
+
+
+### 覆盖率(Covery)面板
+> 标出文件使用情况，有些时候可以用于性能优化
+
+### 变更(Change)面板
+> 显示当前生效的文件变更，像`git diff`一样的形式
+
+![变更面板](@site/static/docs/13.Chrome篇/other-10.gif)
+
+:::tip
+可以修改js，直接修改js文件未生效，则不显示变更，可以开启「启用本地替换」后再修改
+![变更面板](@site/static/docs/13.Chrome篇/other-10.png)
+:::
+
+
+## More
 - 问题
 - 新功能
-- 变更
 - WebAudio
 - WebAuthn
 - CSS概览
-- 性能监视器
 - 性能数据分析
 - 渲染
 - 快速来源
-- 动画
-- 覆盖率
 - 传感器
 - 记录器
 - 媒体
 - 图层
-- 内存检查器
 - 开发者资源
 - 网络请求屏蔽
 - 网络状况
