--- a/01.docs/13.Chrome篇/01.devTools.md
+++ b/01.docs/13.Chrome篇/01.devTools.md
@@ -765,7 +765,7 @@ readAll();
 !!! 性能分析需使用「无痕模式」下进行，以确保 Chrome 环境的干净
 
 ### Lighthouse面板
-> 全自动分析总结，Chrome通过一系列的规则来对网页进行评估分析
+> 全自动分析总结，Chrome通过一系列的规则([RAIL](/blog/9d0a1bb))来对网页进行评估分析
 
 
 ![Lighthouse面板](@site/static/docs/13.Chrome篇/performance-07.gif)
