--- a/10.blog/08.replace方法的正确使用.md
+++ b/10.blog/08.replace方法的正确使用.md
@@ -1,3 +1,9 @@
+---
+description: replace方法的正确使用
+slug: /e1a094b
+tags: 
+  - replace方法的正确使用
+---
 
 
 https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/String/replace#%E8%AF%AD%E6%B3%95
