--- a/01.docs/08.Typescript篇/01.入门.md
+++ b/01.docs/08.Typescript篇/01.入门.md
@@ -116,6 +116,20 @@ const reversedStrings = reverseArray(["apple", "banana", "cherry"]);
 // T也可以是变量别名，此处为一个二维数组（一维为Point，二维为[number, string]组成的长度为2的数组）
 type Point = [number, string];
 const coordinates: Array<Point> = [[1, '2'], [3, '4'], [5, '6']];
+
+// 使用Array[number]，可直接返回联合类型
+type Point2<M extends string[]> = M[number];
+type P = Point2<['small', 'medium', 'large']>;   // 'small' | 'medium' | 'large'
+
+// eg: 通过Array[number]和模版字符串``定义BEM类型
+type IsNever<T> = [T] extends [never] ? true : false
+type IsUnion<U> = IsNever<U> extends true ? "" : U
+type BEM<B extends string, E extends string[], M extends string[]> = `${B}${IsUnion<`__${E[number]}`>}${IsUnion<`--${M[number]}`>}`
+
+type ClassNames1 = BEM<'btn', ['price'], []> // 'btn__price'
+type ClassNames2 = BEM<'btn', ['price'], ['warning', 'success']> // 'btn__price--warning' | 'btn__price--success'
+type ClassNames3 = BEM<'btn', [], ['small', 'medium', 'large']> // 'btn--small' | 'btn--medium' | 'btn--large'
+type ClassNames4 = BEM<'btn', ['primary', 'danger'], ['small', 'medium', 'large']> // "btn__primary--small" | "btn__primary--medium" | "btn__primary--large" | "btn__danger--small" | "btn__danger--medium" | "btn__danger--large"
 ```
 
 #### 2 - Tuple元组 - 特殊数组 {#元组}
@@ -509,6 +523,13 @@ let stringValue: string = value as string;
 - `<>` / `as` 类型断言
 - `<T>` 泛型
 
+声明属性状态的关键字有：
+- `readonly` 只读
+- `public` 公共，默认的状态，可以不写
+- `private` 私有，只能在**类**的内部访问
+- `protected` 受保护的，只能在**类**的内部和派生类中访问，不能在类的外部访问
+- `static` 静态的，属于**类**本身而不是类的实例。静态属性可以在类的内部和外部通过类名访问
+
 类型相关的操作符有：
 - `keyof`: 获取类型的**属性名组成的联合类型**
 - `typeof`: 获取**值的类型**
@@ -569,7 +590,10 @@ interface Dog extends Animal {
 - `T extends U`用作条件类型的判断时，有多种解释：
   - `T`: 非固定值类型，`U`：非固定值类型  => `T`是否是`U`的子类型
   - `T`: 固定值类型，`U`：非固定值类型  => `T`值是否属于`U`类型
-  - `T`: 固定值类型，`U`：固定值类型  => `T`值是否等于`U`值
+  - `T`: 固定值类型，`U`：固定值类型
+    - 数组：基于元素的位置和类型比较
+    - 对象：基于属性和属性值
+    - 其他常量：`T`值是否等于`U`值
 
 ```ts
 // 类型继承
@@ -580,7 +604,26 @@ interface Dog extends Animal {
   breed: string;
 } 
 
-// 条件类型，此处传入<4, 6>，`T extends R['length']`判断为4是否等于0
+/************ 条件类型 *********/
+// 非固定值类型：看是否是子集
+type AA = (number | string) extends string ? true : false;  // false
+type AAA = string extends (number | string) ? true : false;  // true
+
+// 在数组中比较: 基于元素的位置和类型的
+// ['','']是否是['','',''] 部分和 ...any 部分
+type C = ['', ''] extends ['', '', '', ...any] ? true : false;  // false
+
+// ['','','']是否是['',''] 部分和 ...any 部分
+type CC = ['', '',''] extends ['', '', ...any] ? true : false;  // true
+
+
+// 对象内：基于属性和属性值
+type CCC = { name: 'Alice' } extends { name: 'Alice', age: 18 } ? true : false;  // false
+
+type CCCC = {name: 'Alice', age: 18} extends {name: 'Alice'} ? true : false;     // true
+
+
+// 此处传入<4, 6>，`T extends R['length']`判断为4是否等于0
 type GreaterThan<T extends number, U extends number, R extends any[] = []> = 
   T extends R['length']
     ? false
@@ -594,10 +637,14 @@ const varA: GreaterThan<4, 6> = true;
 ### 四、infer类型推断 {#infer}
 > 用于**条件类型 extends**中进行**类型的推断**操作
 
-- 在`extends`相当于函数的类型参数，作类型补充
-- 比直接写`<>类型参数`更友好的一点是：可以用作**动态类型参数**
+- 与`extends`一起使用
+  - 部分功能=函数的类型参数，作类型补充
+  - 比直接写`<>类型参数`更友好的一点是：可以用作**动态类型参数**
+  - 可以看作实现类似高阶函数的一根镙丝钉：比如，
+    - 类型`A`的类型参数`B`，类型参数`B`又是个带类型参数`C`的类型，`infer`可以对`C`做类型推断
+    - 类型`A`的类型参数`B`，类型参数`B`又是个带参数的函数`D`，`infer`可以对`D`的参数做类型推断
 
-```ts
+```ts title=infer做类型补充
 // 类型参数T、infer U相当于是U的类型声明
 type ExtractSelf<T> = T extends infer U ? U : T;
 
@@ -608,7 +655,15 @@ type ExtractSelf3<T, U> = T extends U ? U : T;
 type ExtractSelf2<T> = T extends U ? U : T;
 ```
 
-```ts
+```ts title=infer对类型Promise的类型参数做类型推断
+type GetValueType<T> = T extends Promise<infer R> ? R : never;
+
+type PromiseType = Promise<number[]>;
+
+type Res = GetValueType<PromiseType>;  // number[]
+```
+
+```ts title=infer对函数greet的参数做类型推断
 type FunctionType<T> = T extends (...args: infer Args) => infer Result ? [Args, Result] : never;
 
 // 这么写，FunctionType<typeof greet>会报错：Generic type 'FunctionType' requires 3 type argument(s).
@@ -622,6 +677,7 @@ type GreetFunctionType = FunctionType<typeof greet>; // [ [string, number], stri
 
 let gt: GreetFunctionType = [['Alice', 18], 'Hello, Alice! You are 18 years old'];
 ```
+
 
 ### 五、in遍历对象属性名 {#in}
 > `in`：遍历对象属性的键
