--- a/01.docs/08.Typescript篇/02.补充.md
+++ b/01.docs/08.Typescript篇/02.补充.md
@@ -413,3 +413,40 @@ type LocaleMessageIDs = `${Lang}_${AllLocaleIDs}`; //  "en_welcome_email_id" | "
 - `Lowercase`: 转小写
 - `Capitalize`: 首字母转大写
 - `Uncapitalize`: 首字母转小写
+
+
+## 重载函数
+> 重载版本的函数签名
+
+- 函数体之前的，每个版本对应不同的参数和返回值类型
+- 最后的通用实现部分（即函数体）必须能够处理所有可能的参数类型，通常使用联合类型或条件类型来实现
+- 用于处理一些复杂的情况，例如函数根据传递的参数类型来决定不同的逻辑。它们能够提供更好的类型检查和类型推断，从而增加代码的安全性和可读性
+
+```ts
+function greet(name: string): string;
+function greet(age: number): string;
+function greet(input: string | number): string {
+    if (typeof input === "string") {
+        return `Hello, ${input}!`;
+    } else if (typeof input === "number") {
+        return `You are ${input} years old.`;
+    }
+    return "Hello!";
+}
+
+console.log(greet("Alice"));   // Hello, Alice!
+console.log(greet(25));        // You are 25 years old.
+console.log(greet(true));      // Error: Argument of type 'boolean' is not assignable to parameter of type 'string | number'.
+```
+
+
+## 其它
+
+### 1.Parameters
+> 用于从函数类型中获取参数类型的元组类型
+
+```ts
+type MyFunction = (a: number, b: string, c: boolean) => void;
+
+type MyFunctionParameters = Parameters<MyFunction>; //  [number, string, boolean]
+```
