--- a/01.docs/08.Typescript篇/02.补充.md
+++ b/01.docs/08.Typescript篇/02.补充.md
@@ -450,3 +450,15 @@ type MyFunction = (a: number, b: string, c: boolean) => void;
 
 type MyFunctionParameters = Parameters<MyFunction>; //  [number, string, boolean]
 ```
+
+
+### 2.const类型断言中的字面量类型
+
+```ts
+const myNumber = 42;
+const myLiteralNumber = 42 as const; // 类型为 42（数字字面量类型）
+
+const myString = "hello";
+const myLiteralString = "hello" as const; // 类型为 "hello"（字符串字面量类型）
+
+```
