--- a/01.docs/08.Typescript篇/01.入门.md
+++ b/01.docs/08.Typescript篇/01.入门.md
@@ -388,6 +388,7 @@ console.log(result); // Output: "Hello, world!"
 #### 9 - 联合类型 {#联合类型}
 > 将多个类型组合在一起，以表示一个值可以是这些类型中的任意一个，使用`|`连接
 
+
 ```ts
 // 声明一个联合类型
 type NumberOrString = number | string;
@@ -410,6 +411,45 @@ label = 'template'; // OK
 label = 'rich';     // OK
 label = 'custom';   // Error，'custom' 不是有效的值
 ```
+
+
+
+:::tip
+2个映射类型生成的联合类型，不是具有两个映射类型属性合成的属性，而应该理解为：具有映射类型A的所有属性，或者具有映射类型B的所有属性
+:::
+
+```ts
+interface A {
+  name: string;
+  age: string;
+}
+
+interface B {
+  name: string;
+  height: number;
+}
+
+type C = A | B;  // C可能是{name, age}，或者是{name, height}，而不是{name, age, height}
+
+// 不报错
+const c: C = {
+  name: 'Alice',
+  age: "18",
+  height: 178
+}
+
+// 会报错：因为这里不知道c是具有A类型  还是B类型
+// c.height
+
+// 方法一：类型判断
+if ('height' in c) {
+  c.height
+}
+
+// 方法二：使用as断言
+(a as B).height
+```
+
 
 #### 10 - 交叉类型 {#交叉类型}
 > 将多个类型合并成一个新的类型，新类型将拥有所有参与合并的类型的属性和方法。使用 `&` 符号连接
