--- a/01.docs/05.Chrome篇/01.devTools使用.md
+++ b/01.docs/05.Chrome篇/01.devTools使用.md
@@ -1,8 +1,8 @@
 ---
-description: devTools
+description: devTools使用
 slug: /aa7645d
 tags: 
-  - devTools
+  - devTools使用
 ---
 
 [官方文档](https://developer.chrome.com/docs/devtools/)
