--- a/01.docs/05.Chrome篇/02.Chrome插件/01.概述.md
+++ b/01.docs/05.Chrome篇/02.Chrome插件/01.概述.md
@@ -1,3 +1,9 @@
+---
+description: 概述
+slug: /47222ba
+tags: 
+  - 概述
+---
 
 <img src="http://image.liuxianan.com/201706/20170619_114836_364_3616.png" width="200" />
 
