--- a/01.docs/05.Chrome篇/02.Chrome插件/03.API/01.runtime.md
+++ b/01.docs/05.Chrome篇/02.Chrome插件/03.API/01.runtime.md
@@ -1,3 +1,9 @@
+---
+description: runtime
+slug: /fc7135e
+tags: 
+  - runtime
+---
 # runtime 运行时
 [官方文档](https://developer.chrome.com/docs/extensions/reference/runtime/)
 > 用于检测和响应运行时事件，例如应用程序安装、启动、关闭、卸载等
