--- a/01.docs/05.Chrome篇/02.Chrome插件/03.API/03.scripting.md
+++ b/01.docs/05.Chrome篇/02.Chrome插件/03.API/03.scripting.md
@@ -1,3 +1,9 @@
+---
+description: scripting
+slug: /17c3509
+tags: 
+  - scripting
+---
 # scripting 内容脚本
 [官方文档](https://developer.chrome.com/docs/extensions/reference/scripting/)
 > 动态管理网页内容，例如注入脚本、样式表、执行脚本等
