--- a/01.docs/05.Chrome篇/02.Chrome插件/03.API/05.tabs.md
+++ b/01.docs/05.Chrome篇/02.Chrome插件/03.API/05.tabs.md
@@ -1,3 +1,9 @@
+---
+description: tabs
+slug: /e6c29c4
+tags: 
+  - tabs
+---
 # tabs 选项卡
 
 [官方文档](https://developer.chrome.com/docs/extensions/reference/tabs)
