--- a/01.docs/05.Chrome篇/02.Chrome插件/03.API/06.tabGroups.md
+++ b/01.docs/05.Chrome篇/02.Chrome插件/03.API/06.tabGroups.md
@@ -1,3 +1,9 @@
+---
+description: tabGroups
+slug: /16c9dc5
+tags: 
+  - tabGroups
+---
 # tabGroups 选项卡组
 [官方文档](https://developer.chrome.com/docs/extensions/reference/tabGroups)
 
