--- a/01.docs/05.Chrome篇/02.Chrome插件/03.API/07.storage.md
+++ b/01.docs/05.Chrome篇/02.Chrome插件/03.API/07.storage.md
@@ -1,3 +1,9 @@
+---
+description: storage
+slug: /2132d60
+tags: 
+  - storage
+---
 
 # storage 存储
 [官方文档](https://developer.chrome.com/docs/extensions/reference/storage/)
