--- a/01.docs/05.Chrome篇/02.Chrome插件/03.API/08.contextMenus.md
+++ b/01.docs/05.Chrome篇/02.Chrome插件/03.API/08.contextMenus.md
@@ -1,3 +1,9 @@
+---
+description: contextMenus
+slug: /f807f5e
+tags: 
+  - contextMenus
+---
 # contextMenus 右键菜单
 [官方文档](https://developer.chrome.com/docs/extensions/reference/contextMenus)
 
