--- a/01.docs/05.Chrome篇/02.Chrome插件/03.API/11.offscreen.md
+++ b/01.docs/05.Chrome篇/02.Chrome插件/03.API/11.offscreen.md
@@ -1,3 +1,9 @@
+---
+description: offscreen
+slug: /0579a28
+tags: 
+  - offscreen
+---
 
 # offscreen 离屏文档
 [官方文档](https://developer.chrome.com/docs/extensions/reference/offscreen/)
