--- a/01.docs/05.Chrome篇/02.Chrome插件/03.API/12.permissions.md
+++ b/01.docs/05.Chrome篇/02.Chrome插件/03.API/12.permissions.md
@@ -1,3 +1,9 @@
+---
+description: permissions
+slug: /9f71573
+tags: 
+  - permissions
+---
 
 # permissions 权限
 [官方文档](https://developer.chrome.com/docs/extensions/reference/permissions)
