--- a/01.docs/05.Chrome篇/02.Chrome插件/03.API/14.tabCapture.md
+++ b/01.docs/05.Chrome篇/02.Chrome插件/03.API/14.tabCapture.md
@@ -1,3 +1,9 @@
+---
+description: tabCapture
+slug: /b13577a
+tags: 
+  - tabCapture
+---
 # tabCapture 标签媒体流
 [官方文档](https://developer.chrome.com/docs/extensions/reference/tabCapture/)
 
