--- a/01.docs/05.Chrome篇/02.Chrome插件/03.API/15.sidePanel.md
+++ b/01.docs/05.Chrome篇/02.Chrome插件/03.API/15.sidePanel.md
@@ -1,3 +1,9 @@
+---
+description: sidePanel
+slug: /39ebd01
+tags: 
+  - sidePanel
+---
 
 # sidePanel 侧边栏
 [官方文档](https://developer.chrome.com/docs/extensions/reference/sidePanel/)
