--- a/01.docs/05.Chrome篇/02.Chrome插件/03.API/16.tts.md
+++ b/01.docs/05.Chrome篇/02.Chrome插件/03.API/16.tts.md
@@ -1,3 +1,9 @@
+---
+description: tts
+slug: /a94cbdb
+tags: 
+  - tts
+---
 # tts 文本转语音
 [官方文档](https://developer.chrome.com/docs/extensions/reference/api/tts)
 
