--- a/01.docs/05.Chrome篇/02.Chrome插件/03.API/17.webRequest.md
+++ b/01.docs/05.Chrome篇/02.Chrome插件/03.API/17.webRequest.md
@@ -1,3 +1,9 @@
+---
+description: webRequest
+slug: /5314fe0
+tags: 
+  - webRequest
+---
 # webRequest web请求
 [官方文档](https://developer.chrome.com/docs/extensions/reference/api/webRequest)
 
