--- a/01.docs/05.Chrome篇/02.Chrome插件/06.Chrome插件的联调.md
+++ b/01.docs/05.Chrome篇/02.Chrome插件/06.Chrome插件的联调.md
@@ -1,3 +1,9 @@
+---
+description: Chrome插件的联调
+slug: /2e2b6c7
+tags: 
+  - Chrome插件的联调
+---
 ## background
 
 > `chrome://extensions/` -> 插件 -> 点击`Serveice Worker`
