--- a/01.docs/05.Chrome篇/02.Chrome插件/03.API/04.windows.md
+++ b/01.docs/05.Chrome篇/02.Chrome插件/03.API/04.windows.md
@@ -1,3 +1,9 @@
+---
+description: windows
+slug: /fd434c4
+tags: 
+  - windows
+---
 # windows 浏览器窗口
 [官方文档](https://developer.chrome.com/docs/extensions/reference/api/windows)
 
