--- a/01.docs/05.Chrome篇/02.Chrome插件/03.API/09.commands.md
+++ b/01.docs/05.Chrome篇/02.Chrome插件/03.API/09.commands.md
@@ -1,3 +1,9 @@
+---
+description: commands
+slug: /126376f
+tags: 
+  - commands
+---
 
 # commands 快捷键
 [官方文档](https://developer.chrome.com/docs/extensions/reference/commands)
