--- a/01.docs/05.Chrome篇/02.Chrome插件/03.API/10.notifications.md
+++ b/01.docs/05.Chrome篇/02.Chrome插件/03.API/10.notifications.md
@@ -1,3 +1,9 @@
+---
+description: notifications
+slug: /0b75e5b
+tags: 
+  - notifications
+---
 # notifications 通知
 [官方文档](https://developer.chrome.com/docs/extensions/reference/notifications)
 
