--- a/01.docs/05.Chrome篇/02.Chrome插件/03.API/13.cookies.md
+++ b/01.docs/05.Chrome篇/02.Chrome插件/03.API/13.cookies.md
@@ -1,3 +1,9 @@
+---
+description: cookies
+slug: /19a7499
+tags: 
+  - cookies
+---
 
 # cookie
 [官方文档](https://developer.chrome.com/docs/extensions/reference/cookies)
