--- a/01.docs/05.Chrome篇/02.Chrome插件/03.API/02.action.md
+++ b/01.docs/05.Chrome篇/02.Chrome插件/03.API/02.action.md
@@ -5,6 +5,8 @@ tags:
   - action
 ---
 # action 工具栏
+[官方文档](https://developer.chrome.com/docs/extensions/reference/action/)
+
 > 控制工具栏中扩展程序的图标，`manifest.json`必须配置`action`字段
 
 ## icon图标
