--- a/01.docs/05.Chrome篇/02.Chrome插件/03.API/05.tabs.md
+++ b/01.docs/05.Chrome篇/02.Chrome插件/03.API/05.tabs.md
@@ -125,7 +125,7 @@ chrome.runtime.onInstalled.addListener(({reason}) => {
 
 ## 方法 - 获取
 
-### query() 获取提定选项卡
+### query() 获取指定选项卡
 
 ```ts
 type WindowType = 'normal' | 'popup' | 'panel' | 'app' | 'devtools';
@@ -442,7 +442,21 @@ chrome.tabs.onCreated.addListener(
 
 ```ts
 chrome.tabs.onUpdated.addListener(
-  callback: (tabId: number, changeInfo: {status?: TabStatus, url?: string, pinned?: boolean, audible?: boolean, discarded?: boolean, autoDiscardable?: boolean, mutedInfo?: MutedInfo, favIconUrl?: string, title?: string}, tab: Tab) => void,
+  callback: (
+    tabId: number, 
+    changeInfo: {
+      status?: TabStatus, 
+      url?: string, 
+      pinned?: boolean, 
+      audible?: boolean, 
+      discarded?: boolean, 
+      autoDiscardable?: boolean, 
+      mutedInfo?: MutedInfo, 
+      favIconUrl?: string, 
+      title?: string
+    }, 
+    tab: Tab
+  ) => void,
 )
 ```
 
@@ -450,7 +464,15 @@ chrome.tabs.onUpdated.addListener(
 
 ```ts
 chrome.tabs.onMoved.addListener(
-  callback: (tabId: number, moveInfo: {fromIndex: number, toIndex: number, windowId: number}, tab: Tab) => void,
+  callback: (
+    tabId: number, 
+    moveInfo: {
+      fromIndex: number, 
+      toIndex: number, 
+      windowId: number
+    }, 
+    tab: Tab
+  ) => void,
 )
 ```
 
