--- a/01.docs/05.Chrome篇/02.Chrome插件/01.概述.md
+++ b/01.docs/05.Chrome篇/02.Chrome插件/01.概述.md
@@ -5,10 +5,11 @@ tags:
   - 概述
 ---
 
-<img src="http://image.liuxianan.com/201706/20170619_114836_364_3616.png" width="200" />
+
+![crx](@site/static/docs/13.Chrome篇/crx.png)
 
 
-## 文件是Chrome扩展
+## 是什么
 
 Chrome扩展：英文是`Chrome Extensions`，平常我们又称之为Chrome插件，它是基于Web技术(js、css、html)的软件程序，用来增强浏览器功能。以`.crx`为后缀
 
